<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Flavor Demo</string>
    <string name="feature_1">Feature 1</string>
    <string name="feature_2">Feature 2</string>
    <string name="feature_3">Feature 3</string>
    <string name="feature_4">Feature 4</string>
    <string name="feature_5">Feature 5</string>
    <string name="feature_6">Feature 6</string>

</resources>